--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
-.\Arduino\libraries\ArduinoJson\*
-./Arduino/libraries/ArduinoJson/*
-!.gitignore
+\Arduino\libraries\ArduinoJson\*
+/Arduino/libraries/ArduinoJson/*
